fix: fix height of dialog on mobile

--- a/styles/Components.module.scss
+++ b/styles/Components.module.scss
@@ -217,6 +217,8 @@
 
       border-radius: 0;
       border: none;
+
+      max-height: 100vh;
     }
   }
 }
